--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ body {
 
 }
 
+footer {
+  padding-top: 80pt;
+  margin-top: 20pt;
+  border-top: 1px solid rgb(230, 230, 230);
+}
+
 /* Top Bar */
 .topBar {
   display: flex;
@@ -43,7 +49,7 @@ body {
 }
 
 .subtle {
-  color: rgb(255, 255, 255, 0.4);
+  color: rgb(255, 255, 255, 0.2);
 }
 
 .mainBody {
@@ -69,7 +75,7 @@ body {
   max-width: 140px;
 }
 
-.contactTopline, .sectionHead {
+.contactTopline, .sectionHead, .pageHead {
   font-weight: 400;
   color: #2c4a3f;
 }
@@ -118,6 +124,12 @@ ul {
   margin: 0;
 }
 
+ul.points {
+  list-style: '- ';
+  padding: 0 0 0 16pt;
+  margin: 0 0 0 16pt;
+}
+
 /* Accordion */
 .panel {
   background-color: white;
@@ -129,25 +141,36 @@ ul {
 .sectionCon {
   margin: 0 0 10pt 0;
   padding: 0 0 10pt 0;
-  border-bottom: 1px solid rgb(0,0,0,0.08);
+ /*  border-bottom: 1px solid rgb(0,0,0,0.08); */
+}
+
+.pageHead {
+  color: #2c4a3f;
+  align-items: left;
 }
 
 .sectionHead {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  color: #2c4a3f;
+  align-items: left;
+  padding: 10pt 0 0 0;
 }
 
 .sectionBody {
-  margin: 6pt 0 6pt 0;
+  margin: 6pt 0 9pt 0;
 }
 
 .jobTitle {
-  font-weight: 400;
+  font-weight: 200;
+  color: black;
+}
+
+.jobDetail{
+  padding-left: 10pt;
+  color: rgb(140, 140, 140);
 }
 
 .jobDate {
-  padding: 0 0 6pt 0;
+  padding-bottom: 6pt;
 }
 
 /* Code Formatting */
@@ -183,14 +206,16 @@ pre {
   color: #505c59;
   border-radius: 9px 9px 0 0;
   margin: 10pt auto 4pt auto;
+  background-color: rgb(248, 248, 248);
 }
 
 .output {
   color: #5b5e5c;
   border: 1px solid #c2db00;
   max-height: 150pt;
-  margin: 0 auto 20pt auto;
+  margin: 0 auto 10pt auto;
   border-radius: 0 0 9px 9px;
+  background-color: rgb(248, 248, 248);
 }
 
 .inline, .inlineF {
