--- a/style.css
+++ b/style.css
@@ -4,36 +4,33 @@ body {
   margin: 0 auto auto auto;
   max-width: 800px;
   overflow-y: scroll;
-
+  
   background-color: white;
   font-size: 12pt;
   font-weight: 300;
   text-align: left;
   font-family: 'Roboto Slab', serif;
   line-height: 18pt;
-
+  
   color: rgb(40,50,55);
-
 }
 
-footer {
-  padding-top: 80pt;
-  margin-top: 20pt;
-  border-top: 1px solid rgb(230, 230, 230);
+.mainBody {
+  padding: 40pt 0 0 0;
 }
 
-/* Top Bar */
+/* TOP BAR ------------------------------------------------------------------ */
 .topBar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  z-index: 5;
-  height: 28pt;
-  width: 92%;
-  max-width: 800px;
-  position: fixed;
-  padding: 0 0;
-}
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 5;
+    height: 28pt;
+    width: 92%;
+    max-width: 800px;
+    position: fixed;
+    padding: 0 0;
+  }
 
 .topBar::before{
   content: "";
@@ -44,23 +41,85 @@ footer {
   position: fixed;
   z-index: -1;
   background-color: #2c4a3f;
-  border-bottom: 1px solid rgb(0, 0, 0, 0.20);
+    border-bottom: 1px solid rgb(0, 0, 0, 0.20);
   box-shadow: 0 0 10px 1px rgb(0, 0, 0, 0.05);
 }
 
-.subtle {
-  color: rgb(255, 255, 255, 0.2);
-}
-
-.mainBody {
-  padding: 40pt 0 0 0;
-}
-
-.mainTitle {
+.topTitle {
   color: #c2db00;
   font-weight: 400;
   font-size: 12pt;
 }
+
+/* NAV MENU ----------------------------------------------------------------- */
+.openNav {
+  color: white;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  max-width: 80%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  background-color: #111111;
+  overflow-x: hidden;
+  transition: 0.2s;
+  text-align: left;
+}
+
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  color: #818181;
+  display: block;
+  transition: 0.1s;
+}
+
+.sidenav a:hover {
+  color: #fa006c;
+}
+
+.navIconCon {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.navIcon {
+  margin: 0;
+  padding: 0;
+  width: 0;
+}
+
+
+/* ACCORDION ---------------------------------------------------------------- */
+.panel {
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition-duration: 0.3s;
+}
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .contactCard {
   display: flex;
@@ -70,7 +129,7 @@ footer {
 }
 
 .contactImg {
-  border-radius: 50%;
+  border-radius: 50%; 
   border: 1px solid rgb(0,0,0,0.2);
   max-width: 140px;
 }
@@ -88,11 +147,11 @@ footer {
 }
 
 .rightCol {
- border-left: 1px solid rgb(0,0,0,0.08);
- padding: 8pt 0 8pt 16pt;
- display: flex;
- align-items: center;
- overflow-x: auto;
+  border-left: 1px solid rgb(0,0,0,0.08);
+  padding: 8pt 0 8pt 16pt;
+  display: flex;
+  align-items: center;
+  overflow-x: auto;
 }
 
 .icon {
@@ -105,17 +164,12 @@ a {
   text-decoration: none;
   color: inherit;
   transition: 0.2s;
-}
-
-
-.fa-plus-circle {
-  color: rgb(0, 60, 75, 0.2);
-  transition: 0.2s;
+  font-weight: 400;
 }
 
 a:hover, a:hover i {
   color: #c2db00;
-  transition: 0.2s;
+    transition: 0.2s;
 }
 
 ul {
@@ -130,166 +184,8 @@ ul.points {
   margin: 0 0 0 16pt;
 }
 
-/* Accordion */
-.panel {
-  background-color: white;
-  max-height: 0;
-  overflow: hidden;
-  transition-duration: 0.3s;
-}
 
-.sectionCon {
-  margin: 0 0 10pt 0;
-  padding: 0 0 10pt 0;
- /*  border-bottom: 1px solid rgb(0,0,0,0.08); */
-}
 
-.pageHead {
-  color: #2c4a3f;
-  align-items: left;
-}
-
-.sectionHead {
-  color: #2c4a3f;
-  align-items: left;
-  padding: 10pt 0 0 0;
-}
-
-.sectionBody {
-  margin: 6pt 0 9pt 0;
-}
-
-.jobTitle {
-  font-weight: 200;
-  color: black;
-}
-
-.jobDetail{
-  padding-left: 10pt;
-  color: rgb(140, 140, 140);
-}
-
-.jobDate {
-  padding-bottom: 6pt;
-}
-
-/* Code Formatting */
-pre {
-  font-size: 10pt;
-  line-height: 14pt;
-  margin: 4pt 0 4pt 0;
-  font-family: 'Inconsolata', monospace;
-}
-
-.source, .output, .inline, .inlineF {
-  background-color: white;
-  text-align: left;
-  font-size: 10pt;
-  line-height: 14pt;
-  overflow: auto;
-  white-space: pre;
-  font-weight: 300;
-  font-family: 'Inconsolata', monospace;
-}
-
-.source, .output {
-  max-width: 100%;
-  width: inherit;
-  -moz-box-shadow:    inset 0 0 5px rgb(0,0,0,0.2);
-  -webkit-box-shadow: inset 0 0 5px rgb(0,0,0,0.2);
-  box-shadow:         inset 0 0 5px rgb(0,0,0,0.2);
-}
-
-.source, .output, .warning, .error, .message {
-  padding: 2pt 0 2pt 6pt;
-}
-
-.source {
-  border: 1px solid #2c4a3f;
-  color: #505c59;
-  border-radius: 9px 9px 0 0;
-  margin: 10pt auto 4pt auto;
-  background-color: rgb(248, 248, 248);
-}
-
-.output {
-  color: #5b5e5c;
-  border: 1px solid #c2db00;
-  max-height: 150pt;
-  margin: 0 auto 10pt auto;
-  border-radius: 0 0 9px 9px;
-  background-color: rgb(248, 248, 248);
-}
-
-.inline, .inlineF {
-  background-color: white;
-  border: 1px solid #b9c4c1;
-  border-radius: 4px;
-  color: #505c59;
-  padding: 1pt 2pt;
-}
-
-.inlineF {
-  color: #137487;
-}
-
-.inlineF::after{
-  content: "()";
-  color: #505c59;
-}
-
-.error {
-	font-weight: 400;
-	color: #FF0000;
-  border:solid 1px #F7F7F7;
-}
-
-.warning {
-	font-weight: 400;
-  border:solid 1px #F7F7F7;
-}
-
-.message {
-	font-style: italic;
-  border:solid 1px #F7F7F7;
-}
-
-.hl.num {
-  color: #AF0F91;
-}
-.hl.str {
-  color: #317ECC;
-}
-.hl.com {
-  color: #AD95AF;
-  font-style: italic;
-}
-
-.hl.opt {
-  color: #000000;
-}
-
-.hl.std {
-  color: #585858;
-}
-
-.hl.kwa {
-  color: #295F94;
-  font-weight: bold;
-}
-
-.hl.kwb {
-  color: #B05A65;
-}
-
-.hl.kwc {
-  color: #55aa55;
-}
-
-.hl.kwd {
-  color: #137487;
-  font-weight: 300;
-}
 
 
 
@@ -297,19 +193,19 @@ pre {
   .desktopOnly {
     display: none;
   }
-
+  
   .iconCon {
     display: flex;
     justify-content: center;
   }
-
+  
   .contactCard {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto 10pt auto;
   }
-
+  
   .leftCol, .rightCol {
     width: 100%;
     border: none;
@@ -320,10 +216,10 @@ pre {
     align-items: center;
     justify-content: center;
   }
-
+  
   .contactImg {
     margin: 0 auto;
     padding: 0;
   }
-
+  
 }
