--- a/style.css
+++ b/style.css
@@ -16,7 +16,18 @@ body {
 }
 
 .mainBody {
-  padding: 40pt 0 0 0;
+  padding: 40pt 0 60pt 0;
+  border-bottom: 1px solid #d1d1d1;
+  margin-bottom: 30pt;
+}
+
+strong {
+  font-weight: 400;
+  color: #e3005f;
+}
+
+a:hover {
+  color: #c2db00;
 }
 
 /* TOP BAR ------------------------------------------------------------------ */
@@ -51,6 +62,10 @@ body {
   font-size: 12pt;
 }
 
+.topPage {
+  color: white;
+}
+
 /* NAV MENU ----------------------------------------------------------------- */
 .openNav {
   color: white;
@@ -64,22 +79,23 @@ body {
   z-index: 1;
   top: 0;
   right: 0;
-  background-color: #111111;
+  background-color: #c2db00;
   overflow-x: hidden;
-  transition: 0.2s;
+  transition: 0.4s;
   text-align: left;
 }
 
 .sidenav a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
-  color: #818181;
+  color: #2c4a3f;
   display: block;
-  transition: 0.1s;
+  transition: 0.2s;
 }
 
 .sidenav a:hover {
-  color: #fa006c;
+  color: white;
+  transition: 0.2s;
 }
 
 .navIconCon {
@@ -91,21 +107,50 @@ body {
   margin: 0;
   padding: 0;
   width: 0;
+  transition: 0.2s;
 }
 
 
 /* ACCORDION ---------------------------------------------------------------- */
 .panel {
-  background-color: white;
+  background-color: #2c4a3f;
   max-height: 0;
   overflow: hidden;
   transition-duration: 0.3s;
 }
+
+.panel a {
+  color: #c2db00;
+}
+
+.panel a:hover {
+  color: white;
+}
  
 
+/* CODE FORMATTING ---------------------------------------------------------- */
+.ri {
+  font-family: monospace;
+  color: #467291;
+}
 
+.source, .output {
+  font-size: 10pt;
+  -moz-box-shadow:    inset 0 0 5px #00000020;
+  -webkit-box-shadow: inset 0 0 5px #00000020;
+  box-shadow:         inset 0 0 5px #00000020;
+}
 
+.source {
+  border-radius: 5pt 5pt 0 0;
+  border: 1px solid #c2db00;
+}
 
+.output {
+  margin-top: 5pt;
+  border-radius: 0 0 5pt 5pt;
+  border: 1px solid #d1d1d1;
+}
 
 
 
@@ -167,21 +212,19 @@ a {
   font-weight: 400;
 }
 
-a:hover, a:hover i {
+a:hover i.icon {
   color: #c2db00;
-    transition: 0.2s;
+  transition: 0.2s;
 }
 
 ul {
+  list-style-type: circle;
+}
+
+ul.nodot {
   list-style: none;
   padding: 0;
   margin: 0;
-}
-
-ul.points {
-  list-style: '- ';
-  padding: 0 0 0 16pt;
-  margin: 0 0 0 16pt;
 }
 
 
