--- a/style.css
+++ b/style.css
@@ -135,6 +135,8 @@ a:hover {
 }
 
 .source, .output {
+  white-space:pre-wrap;
+  overflow-x: auto;
   font-size: 10pt;
   -moz-box-shadow:    inset 0 0 5px #00000020;
   -webkit-box-shadow: inset 0 0 5px #00000020;
