--- a/style.css
+++ b/style.css
@@ -135,8 +135,13 @@ a:hover {
 }
 
 .source, .output {
-  white-space:pre-wrap;
-  overflow-x: auto;
+  white-space: pre-wrap;
+  overflow: auto;
+  
+  max-width: 100%;
+  width: inherit;
+  max-height: 150pt;
+  
   font-size: 10pt;
   -moz-box-shadow:    inset 0 0 5px #00000020;
   -webkit-box-shadow: inset 0 0 5px #00000020;
