--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ a:hover {
 /* CODE FORMATTING ---------------------------------------------------------- */
 .ri {
   font-family: monospace;
-  color: #467291;
+  color: #4087ad;
 }
 
 .source, .output {
