--- a/style.css
+++ b/style.css
@@ -69,6 +69,8 @@ a:hover {
 /* NAV MENU ----------------------------------------------------------------- */
 .openNav {
   color: white;
+  background-color: white;
+  fill: red;
 }
 
 .sidenav {
