--- a/style.css
+++ b/style.css
@@ -119,6 +119,15 @@ a:hover {
   transition-duration: 0.3s;
 }
 
+.boxPanel {
+  background-color: #c2db00;
+  max-height: 0;
+  margin: -10pt 0 0 0;
+  padding: 0;
+  overflow: hidden;
+  transition-duration: 0.3s;
+}
+
 .panel a {
   color: #c2db00;
 }
@@ -146,6 +155,7 @@ a:hover {
   -moz-box-shadow:    inset 0 0 5px #00000012;
   -webkit-box-shadow: inset 0 0 5px #00000012;
   box-shadow:         inset 0 0 5px #00000012;
+  margin: 4pt 0;
 }
 
 .source {
@@ -154,9 +164,9 @@ a:hover {
 }
 
 .output {
-  margin-top: 5pt;
   border-radius: 0 0 5pt 5pt;
   border: 1px solid #d1d1d1;
+  background-color: white;
 }
 
 
@@ -172,6 +182,12 @@ a:hover {
   border-top: 1px solid #d1d1d1;
 }
 
+
+.box {
+  padding: 16pt;
+  background-color: #c2db00;
+  color: black;
+}
 
 
 
