--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ a:hover {
 
 .output {
   border-radius: 0 0 5pt 5pt;
-  border: 1px solid #d1d1d1;
+  border: 1px solid #616e7a;
   background-color: white;
 }
 
