--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 /* Generic Elements ***********************************************************/
 body {
-  font-size: 18px;
+  font-size: 14pt;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   color: black;
@@ -59,7 +59,7 @@ ul.navList > li::after, ul.navList > li::before {
   margin: 0;
 }
 
-h1:nth-child(1)::after, h1:nth-child(1)::before {
+.pageHead > h1::after, .pageHead > h1::before {
   content: "";
   margin: 0;
 }
@@ -105,14 +105,57 @@ img.profile {
 }
 
 /* Navigation Menu ************************************************************/
+#navPane {
+  height: 100%;
+  width: 0;
+  max-width: 80%;
+  position: fixed;
+  z-index: 6;
+  top: 0;
+  right: 0;
+  background-color: var(--col1);
+  overflow-x: hidden;
+  transition: 0.3s;
+  text-align: left;
+  margin: 3em 0 0 0;
+}
+
+#menuClose {
+  display: none;
+}
+
+#menuOpen, #menuClose {
+  transition: 0.2s;
+}
+
+#menuClose:hover, #menuOpen:hover {
+  color: red;
+}
+
+#overlay {
+  transition-duration: 0.5s;
+  width:  100%;
+  height: 100%;
+  z-index: -1;
+  position: fixed;
+  left: 0;
+}
+
+.navList {
+  margin: 1em 0 0 1em;
+  padding: 0 0 0 1em;
+  border-left: 1px solid var(--col5);
+}
+
+
 .navLink {
-  color: blue;
+  color: var(--col5);
   text-decoration: none;
   transition: 0.6s;
 }
 
 .navLink:hover {
-  color: green;
+  color: var(--col4);
   transition: 0.3s;
 }
 
@@ -122,10 +165,9 @@ img.profile {
 }
 
 .fa {
-  margin: 0 0.25em;
+  margin: 0 0.5em 0 0;
   font-size: 22px !important;
 }
-
 
 /* Desktop tweaks  ************************************************************/
 .deskOnly {
@@ -136,13 +178,61 @@ img.profile {
   display: inline;
 }
 
-@media only screen and (min-width: 520px) {
+@media only screen and (min-width: 620px) {
   body {
     max-width: 800px;
+    font-weight: 300;
+    font-size: 12pt;
+    text-align: justify;
   }
 
   .pageHead {
     max-width: 800px;
+  }
+
+  .flexDesk {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    border-bottom: 1px solid var(--col5);
+    margin-bottom: 1.5em;
+  }
+
+  .flexDeskComponent {
+    margin-bottom: 0;
+  }
+
+  .flexDeskComponent > h1 {
+    margin-top: 0;
+  }
+
+  img.profile {
+    width: 40vw;
+    max-width: 180px;
+    border-radius: 50%;
+    margin-bottom: 1.5em;
+    margin-right: 1.5em;
+  }
+
+  strong, h1 {
+    font-weight: 400;
+  }
+
+
+  h1::before {
+    content: "";
+    margin: 0;
+  }
+
+  ul > li::before {
+    content: '\2022';
+    margin: 0 0.5em 0 0;
+    color: var(--col5);
+  }
+
+  ul > li::after {
+    content: '';
   }
 
   .deskOnly {
