--- a/style.css
+++ b/style.css
@@ -25,12 +25,15 @@ body {
 
 strong {
   font-weight: 600;
-  color: black;
 }
 
 ul {
   list-style: none;
   padding: 0;
+}
+
+ul.multiList > li {
+  padding: 0.75em 0 0 0;
 }
 
 ul > li::after, ul > li::before {
@@ -39,20 +42,58 @@ ul > li::after, ul > li::before {
   color: var(--col5);
 }
 
-h1 {
+h1, h2, h3 {
   display: block;
   font-size: 1.2em;
   font-weight: 600;
   color: var(--col1);
-  border-top: 1px solid var(--col5);
-  padding: 1.5em 0 0 0 ;
-  margin: 1em 0 0 0;
+  margin: 0;
+  padding: 0;
+}
 
+h2 {
+  color: var(--col2);
+}
+
+h3 {
+  color: var(--col5);
 }
 
 p, ul {
-  margin: 0.5em 0 2em 0;
+  margin: 0.5em 0 1em 0;
   padding: 0;
+}
+
+
+/* Customs ********************************************************************/
+.section {
+  border-bottom: 1px solid red;
+  padding-bottom: 1em;
+  margin-bottom: 3em;
+}
+
+
+.box {
+  padding: 1.5em 2em 1em 2em;
+  margin: 1em 0;
+  background-color: var(--col2);
+  border-radius: 0 1em 0 1em;
+  border-bottom: none;
+}
+
+.flexBox {
+  display: inline;
+  margin: 1em 0 1.5em 0;
+}
+
+img.profile {
+  width: 165px;
+  border-radius: 50%;
+  margin-top: 1em;
+}
+
+.hi1 {
+  color: var(--col3);
 }
 
 /* Special Cases **************************************************************/
@@ -61,24 +102,17 @@ ul.navList > li::after, ul.navList > li::before {
   margin: 0;
 }
 
-.pageHead > h1 {
-  padding: 0;
-  margin: 0;
-  border-top: none;
+.box > p {
+  color: white;
 }
 
-.flexDeskComponent > h1 {
-  margin-top: 0;
-  padding-top: 0.5em;
-  border-top: none;
+.box > h1 {
+  color: var(--col5);
 }
 
-img.profile {
-  width: 60vw;
-  max-width: 200px;
-  border-radius: 50%;
+ul > div {
+  padding-left: 0.8em;
 }
-
 
 /* Page Head  *****************************************************************/
 .pageHead {
@@ -136,7 +170,7 @@ img.profile {
 }
 
 #menuClose:hover, #menuOpen:hover {
-  color: red;
+  color: var(--col3);
 }
 
 #overlay {
@@ -162,7 +196,7 @@ img.profile {
 }
 
 .navLink:hover {
-  color: var(--col4);
+  color: var(--col3);
   transition: 0.3s;
 }
 
@@ -194,29 +228,15 @@ img.profile {
     text-align: justify;
   }
 
+  .flexBox > ul {
+    text-align: left;
+  }
+
   .pageHead {
     max-width: 800px;
   }
 
-  .flexDesk {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    padding-top: 0.5em
-  }
-
-  .flexDeskComponent > h1 {
-    padding-top: 0;
-  }
-
-  img.profile {
-    width: 130px;
-    border-radius: 50%;
-    margin-right: 1.5em;
-  }
-
-  strong, h1 {
+  strong, h1, h2, h3 {
     font-weight: 400;
   }
 
@@ -228,6 +248,18 @@ img.profile {
 
   ul > li::after {
     content: '';
+  }
+
+  .flexBox {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 1em 0 1.5em 0;
+  }
+
+  img.profile {
+    margin-top: 0;
+    margin-right: 1em;
   }
 
   .deskOnly {
