--- a/styleB.css
+++ b/styleB.css
@@ -44,7 +44,7 @@ h1, h2, h3 {
   font-size: 1.2em;
   font-weight: 500;
   color: var(--col1);
-  margin: 0;
+  margin: 2em 0 0 0;
   padding: 0;
 }
 
@@ -194,6 +194,7 @@ img.profile {
 
 .box > h1, .box > h1::after, .box > h1::before {
   color: var(--col5);
+  margin-top: 0;
 }
 
 ​
@@ -205,6 +206,7 @@ p {
   margin: 0 0 1.5em 0;
   padding-top: 1em;
 }
+
 
 .noPad {
   padding: 0
@@ -231,6 +233,7 @@ body::-webkit-scrollbar {
     width: 0;
 }
 
+
 /* Desktop tweaks  ************************************************************/
 .deskOnly {
   display: none;
@@ -255,7 +258,6 @@ body::-webkit-scrollbar {
 
   img.profile {
     width: 170px;
-    border-radius: 50%;
     margin: 1em 1em 1em 0;
   }
 
@@ -268,10 +270,10 @@ body::-webkit-scrollbar {
   }
 
   .flexCard {
-    width: 210px;
+    width: 242px;
     border-top: 1px solid var(--col1);
     border-bottom: 1px solid var(--col1);
     margin: 1.5em 1.5em 0 0;
-    padding: 1em;
+    padding: 1em 0;
   }
 }
