--- a/style.css
+++ b/style.css
@@ -13,18 +13,14 @@
 body {
   font-size: 12pt;
   font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   color: black;
   text-align: center;
   line-height: 1.9em;
-  width: 90vw;
-  max-width: 90vw;
+  width: 85vw;
+  max-width: 800px;
   margin: 0 auto 12em auto;
   overflow-y: scroll;
-}
-
-strong {
-  font-weight: 600;
 }
 
 ul {
@@ -32,100 +28,69 @@ ul {
   padding: 0;
 }
 
-ul.multiList > li {
-  padding: 0.75em 0 0 0;
-}
-
 ul > li::after, ul > li::before {
-  content: '\2022';
+  content: "\2022";
   margin: 0 0.5em;
   color: var(--col5);
 }
 
+strong {
+  font-weight: 500;
+}
+
+a {
+  text-decoration: none;
+  color: var(--col3);
+}
+
+a:hover {
+  color: var(--col5);
+}
+/* Headings *******************************************************************/
 h1, h2, h3 {
   display: block;
   font-size: 1.2em;
-  font-weight: 600;
+  font-weight: 500;
   color: var(--col1);
-  margin: 0;
+  margin: 2em 0 0 0;
   padding: 0;
 }
 
-h2 {
+/* h1::after, h2::after, h3::after, h1::before, h2::before, h3::before {
+  content: "\2022";
+  margin: 0 0.25em;
+  color: var(--col1);
+}
+*/
+h2, h2::after, h2::before {
   color: var(--col2);
 }
 
-h3 {
+h3, h3::after, h3::before {
   color: var(--col5);
 }
 
-p, ul {
-  margin: 0.5em 0 1em 0;
-  padding: 0;
+.pageHead > h1 {
+  margin: 0;
 }
 
-
-/* Customs ********************************************************************/
-.section {
-  border-bottom: 1px solid red;
-  padding-bottom: 1em;
-  margin-bottom: 3em;
-}
-
-
-.box {
-  padding: 1.5em 2em 1em 2em;
-  margin: 1em 0;
-  background-color: var(--col2);
-  border-radius: 0 1em 0 1em;
-  border-bottom: none;
-}
-
-.flexBox {
-  display: inline;
-  margin: 1em 0 1.5em 0;
-}
-
-img.profile {
-  width: 165px;
-  border-radius: 50%;
-  margin-top: 1em;
-}
-
-.hi1 {
-  color: var(--col4);
-}
-
-/* Special Cases **************************************************************/
-ul.navList > li::after, ul.navList > li::before {
+.pageHead > h1::after, .pageHead > h1::before{
   content: "";
   margin: 0;
 }
 
-.box > p {
-  color: white;
-}
-
-.box > h1 {
-  color: var(--col5);
-}
-
-ul > div {
-  padding-left: 0.8em;
-}
-
-/* Page Head  *****************************************************************/
+/* Top Bar ********************************************************************/
 .pageHead {
   z-index: 5;
   position: fixed;
   display: flex;
+  top: 0;
   left: 0.5;
   align-items: center;
   justify-content: space-between;
-  width: 90vw;
-  max-width: 90vw;
-  margin: 0 auto;
-  height: 3em;
+  width: 85vw;
+  max-width: 800px;
+  margin: 0.5em auto;
   font-weight: 200;
 }
 
@@ -138,14 +103,13 @@ ul > div {
   position: fixed;
   z-index: -1;
   background-color: var(--col5);
+  border-bottom: 1px solid var(--col4);
 }
 
-.pagePad {
-  content: "";
-  height: 4.5em;
+body:nth-child(2) {
+  margin-top: 4em;
 }
 
-/* Navigation Menu ************************************************************/
 #navPane {
   height: 100%;
   width: 0;
@@ -159,6 +123,7 @@ ul > div {
   transition: 0.3s;
   text-align: left;
   margin: 3em 0 0 0;
+  border-top: 1px solid var(--col4);
 }
 
 #menuClose {
@@ -180,6 +145,7 @@ ul > div {
   z-index: -1;
   position: fixed;
   left: 0;
+  top:0;
 }
 
 .navList {
@@ -188,6 +154,10 @@ ul > div {
   border-left: 1px solid var(--col2);
 }
 
+ul.navList > li::after, ul.navList > li::before {
+  content: "";
+  margin: 0;
+}
 
 .navLink {
   color: white;
@@ -202,14 +172,76 @@ ul > div {
 
 .iconContainer {
   display: inline-block;
-  margin-top: 0.5em;
+  /* margin-top: 0.5em; */
+  margin: 0;
 }
 
 .fa {
-  margin: 0 0.5em 0 0;
-  font-size: 22px !important;
-  color: var(--col2);
+  margin: 0.35em 0.5em 0 0;
+  font-size: 20px !important;
+  color: var(--col4);
 }
+
+/* Custom components **********************************************************/
+img.profile {
+  width: 180px;
+  border-radius: 50%;
+  margin: 1em 0 0 0;
+}
+
+.box {
+  padding: 1.5em 2em 1.5em 2em;
+  margin: 0em 0 2em 0;
+  background-color: var(--col2);
+  border-radius: 0 1em 0 1em;
+  border: 1px solid var(--col1);
+}
+
+.box > p {
+  color: white;
+}
+
+.box > h1, .box > h1::after, .box > h1::before {
+  color: var(--col5);
+  margin-top: 0;
+}
+
+​
+p {
+  margin: 0.5em 0;
+}
+
+.flexBox {
+  margin: 0 0 1.5em 0;
+  padding-top: 1em;
+}
+
+
+.noPad {
+  padding: 0
+}
+
+.flexCard {
+  overflow-x: scroll;
+  white-space: nowrap;
+  margin-bottom: 0.5em;
+}
+
+.flexCard::-webkit-scrollbar {
+    height: 8px;
+}
+
+.flexCard::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: rgb(250, 250, 250);
+    border: 1px solid rgb(200, 200, 200);
+    width: 5px;
+}
+
+body::-webkit-scrollbar {
+    width: 0;
+}
+
 
 /* Desktop tweaks  ************************************************************/
 .deskOnly {
@@ -221,52 +253,36 @@ ul > div {
 }
 
 @media only screen and (min-width: 620px) {
-  body {
-    max-width: 800px;
-    font-weight: 300;
-    font-size: 12pt;
-    text-align: justify;
-  }
-
-  .flexBox > ul {
-    text-align: left;
-  }
-
-  .pageHead {
-    max-width: 800px;
-  }
-
-  strong, h1, h2, h3 {
-    font-weight: 400;
-  }
-
-  ul > li::before {
-    content: '\2022';
-    margin: 0 0.5em 0 0;
-    color: var(--col5);
-  }
-
-  ul > li::after {
-    content: '';
-  }
-
-  .flexBox {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 1em 0 1.5em 0;
-  }
-
-  img.profile {
-    margin-top: 0;
-    margin-right: 1em;
-  }
-
   .deskOnly {
     display: inline;
   }
 
   .mobOnly {
     display: none;
+  }
+
+  body {
+    text-align: justify;
+  }
+
+  img.profile {
+    width: 170px;
+    margin: 1em 1em 1em 0;
+  }
+
+  .flexBox {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    padding-top: 0;
+  }
+
+  .flexCard {
+    width: 242px;
+    border-top: 1px solid var(--col1);
+    border-bottom: 1px solid var(--col1);
+    margin: 1.5em 1.5em 0 0;
+    padding: 1em 0;
   }
 }
