--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ ul.navList > li::after, ul.navList > li::before {
 }
 
 .fa {
-  margin: 0.35em 0.5em 0 0;
+  margin: 0.35em 0 0 0.35em;
   font-size: 20px !important;
   color: var(--col4);
 }
